presentation almost done

--- a/spring/entrepeneurship/presentation/0616110_presentation.tex
+++ b/spring/entrepeneurship/presentation/0616110_presentation.tex
@@ -1,14 +1,16 @@
 \documentclass{beamer}
-
+\usepackage{xeCJK}
+\usepackage{graphicx}
+\setCJKmainfont{Noto Serif CJK TC}
 %credit to the devs of the metropolis theme
 \usetheme{metropolis}
 
 \title{Digital Transformation: Improving the Odds of success}
 
-\author{Andres Ponce(彭思安)}
+\author{Andr\'es Ponce(彭思安)}
 
 
-\institute{National Chiao 你Tung University}
+\institute{National Chiao Tung University}
 
 \begin{document}
 \maketitle
@@ -25,10 +27,13 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Two things to do}
+	\frametitle{Some things to do}
 		\begin{enumerate}
 			\item{\textbf{Laying out clear priorities}}\pause
-			\item{\textbf{Investing in talent}}
+			\item{\textbf{Investing in talent}}\pause
+			\item{\textbf{Committing Time and Money}}\pause
+			\item{\textbf{Embracing Agility}}\pause
+			\item{\textbf{Empowering People}}
 		\end{enumerate}
 \end{frame}
 
@@ -38,6 +43,9 @@
 	When the executives have a clear vision, there appears
 	to be a higher likelihood of success.\pause
 
+	Focus on a few themes/ ideas directly tied to your 
+	business\pause
+
 	People need to know what they are working for in order to 
 	do it effectively.
 \end{frame}
@@ -45,7 +53,50 @@
 \section{Investing in Talent}
 \begin{frame}
 	\frametitle{Investing in Talent}
-	Invest in talent, especially at the top fam.
+	Sometimes dedicated personnel is required to deal with 
+	the digital transformation.\pause
+
+	Most companies that have successfully 
+	digitized employ a  Chief Digital Officer(CDO) 
 \end{frame}
 
+\section{Committing Time and Money}
+\begin{frame}
+	\frametitle{Committing Time and Money}
+	The company needs to realize that digitizing requires
+	commitment -- and not be scared by it.\pause
+
+	Companies that have digitization as one of their top
+	priorities were more likely to digitize succesfully.\pause
+
+	Sufficient funds and time need to be allocated.
+\end{frame}
+\begin{frame}
+	\frametitle{Embracing Agility}
+	The top digital players are constantly updating their
+	digital systems.\pause
+
+	Employees that generate valuable ideas and pursue 
+	opportunities should also be rewarded.
+\end{frame}
+\begin{frame}
+	\frametitle{Empowering People}
+	Putting people in charge and holding them accountable 
+	for their transformation also increases the chance of 
+	meeting those goals.\pause
+
+	Create a shared sense of accountability.
+\end{frame}
+\section{Conclusion}
+\begin{frame}
+	\frametitle{Conclusion}
+	\begin{columns}
+	\column{0.4\textwidth}
+	Companies can increase the likelihood of digitizing and 
+	increasing their profits, regardless of where in the 
+	company these changes are applied.
+	\column{0.5\textwidth}
+		\includegraphics[scale=0.2]{profits}
+	\end{columns}
+\end{frame}
 \end{document}
