added correct sections in end slides

--- a/spring/entrepeneurship/presentation/0616110_presentation.tex
+++ b/spring/entrepeneurship/presentation/0616110_presentation.tex
@@ -1,7 +1,8 @@
 \documentclass{beamer}
+\usepackage{fontspec}
 \usepackage{xeCJK}
 \usepackage{graphicx}
-\setCJKmainfont{Noto Serif CJK TC}
+\setCJKmainfont{FandolKai-Regular.otf}
 %credit to the devs of the metropolis theme
 \usetheme{metropolis}
 
@@ -71,6 +72,8 @@
 
 	Sufficient funds and time need to be allocated.
 \end{frame}
+
+\section{Embracing Agility}
 \begin{frame}
 	\frametitle{Embracing Agility}
 	The top digital players are constantly updating their
@@ -79,6 +82,8 @@
 	Employees that generate valuable ideas and pursue 
 	opportunities should also be rewarded.
 \end{frame}
+
+\section{Empowering People}
 \begin{frame}
 	\frametitle{Empowering People}
 	Putting people in charge and holding them accountable 
